Update scripts and esos